test/sema/typeck/fn/define-param-name-twice.out
error: Name `_x` bound multiple times in parameter list.
--> define-param-name-twice.dora:1:21
 | fn test(_x: String, _x: Int32) {}
                       ~~
 | 
1 error found.
