test/sema/typeck/fn/define-param-name-twice.dora
fn test(_x: String, _x: Int32) {}
